--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,8 +76,8 @@ nav:
     - Installation: installation.md
     - Usage: usage.md
     - Contributing: contributing.md
-    - FAQ: faq.md
-    - Changelog: changelog.md
+    #- FAQ: faq.md
+    #- Changelog: changelog.md
     - Report Issues: https://github.com/gthlor/prismatools/issues
     - Examples:
         - examples/01_reading_and_exporting.ipynb
