--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
       rev: v6.0.0
       hooks:
           - id: check-toml
-          #- id: check-yaml
+          - id: check-yaml
           - id: end-of-file-fixer
             types: [python]
           - id: trailing-whitespace
