--- a/meta.yaml
+++ b/meta.yaml
@@ -17,12 +17,12 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python {{ python_min }}
     - setuptools >=64
     - setuptools-scm >=8
     - pip
   run:
-    - python >=3.8
+    - python >={{ python_min }}
     - affine
     - h5py
     - ipyleaflet
@@ -41,6 +41,7 @@ test:
     - python {{ python_min }}
 
 about:
+  home: https://github.com/gthlor/prismatools
   summary: prismatools is an open-source Python package for reading, analyzing, and visualizing hyperspectral imagery from the PRISMA mission.
   license: MIT
   license_file: LICENSE
